# sdf2table

./: .gitignore  ChangeLog  Dockerfile  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  bootstrap  build-linux-intel.sh  build-macos-intel.sh  build.sh  configure  configure.ac  sdf2-bundle.pc.in  sdf2-bundle.spec  sdf2-bundle.spec.in
asc-support/: ChangeLog  Makefile.in  configure  configure.in  package
asf-library/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  package
asf-support/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  package
aterm/: .gitignore  .project  Makefile  Makefile.in  aclocal.m4  aterm-uninstalled.pc  aterm.pc  config.status  configure  libtool
aterm-2.5/: Makefile.in  configure  meta-build.m4
c-library/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
error-support/utils/lift-error/: Makefile.am  Makefile.in  lift-error.c
pgen/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  package
pgen/grammar/: Makefile.in
pgen/removevarsyntax/: Makefile.in
pgen/removevarsyntax/src/: Makefile.in
pgen/sdf-checker/: Makefile.in
pgen/sdf-checker/spec/: Makefile.in
pgen/sdf-checker/src/: Makefile.am  Makefile.in  Sdf-Checker.c  main.c  sdfchecker.c
pgen/sdf-upgrade/: Makefile.am  Makefile.in
pgen/sdf-upgrade/spec/: Makefile.am  Makefile.in
pgen/src/: Makefile.am  Makefile.in  Sdf2-Normalization.c  atsets.c  characters.c  flatten.c  flatten.h  follow.c  follow.h  goto.c  goto.h  itemset.h  ksdf2table.c  ksdf2table.h  parseTable-data.c  parseTable-data.h  parseTable-stats.h  pgen-symbol.c  pgenOptions.h  predicted.c  priorities.c  sdf2table.1  sdf2table.src
pgen/test/: Makefile.am  Makefile.in
pgen/test/grammars/: Flat.sdf  Makefile.am  Makefile.in  Sdf2.sdf
pgen/test/tables/: Ambi.tbl  Casl.tbl  Cyclops.tbl  Flat.tbl  Integers.tbl  Isle.tbl  Jacob.tbl  Makefile.am  Makefile.in  Pico.tbl  Prefer.tbl  Prefix.tbl  Risla.tbl  Sdf2.tbl  SimpleCobol.tbl
pt-support/libmept/: Makefile.am  Makefile.in  posInfo.c
pt-support/utils/filterPT/: Makefile.am  Makefile.in  flattenAgain.c  minmax.c
pt-support/utils/filterPT/test/: Makefile.am  Makefile.in
pt-support/utils/filterPT/test/in/: Ambiguous.1.in  Makefile.in  Nested.1.in  Overlapping.1.in  Simple.2.in
pt-support/utils/filterPT/test/sdf/: Ambiguous.tbl  Makefile.in  Nested.sdf  Nested.tbl  Overlapping.sdf  Overlapping.tbl  Simple.sdf
pt-support/utils/filterPT/test/terms/: Makefile.in
pt-support/utils/implodePT/: Makefile.am  Makefile.in  implodePT-main.c
pt-support/utils/implodePT/test/: Makefile.am  Makefile.in
pt-support/utils/implodePT/test/grammar/: Makefile.in
pt-support/utils/implodePT/test/in/: Makefile.in
pt-support/utils/implodePT/test/terms/: Makefile.in
sdf-support/utils/sdf-renaming/src/: Makefile.am  Makefile.in  main.c  sdf-renaming.c
sglr/: ChangeLog  Makefile.am  Makefile.in  README  config.guess  configure  configure.in  package
sglr/doc/: Makefile.in  sglr-api.3  sglr.1
sglr/dump/: Makefile.am  Makefile.in  dump-skel.c
sglr/libsglr/: Makefile.am  Makefile.in  parse-table.c  parse-table.h  sglr-interface.c  sglr.h
sglr/restorebrackets/: Makefile.in
sglr/restorebrackets/src/: Makefile.am  Makefile.in  restorebrackets-main.c
sglr/sglr/: Makefile.am  Makefile.in  sglr-main.c  sglr.idef  sglr.tif.c  sglr.tif.h
sglr/src/: Makefile.am  Makefile.in  commandLineInterface.c  commandLineInterface.h  inputString-api.h  main.c  mainOptions.c  sglrInterface.c  toolbusInterface.h
sglr/src/gss/: gss.c  gss.h  gssEdge-api.h  gssEdge-data.h  gssEdgeList.h  gssGarbageCollector.c  gssNode-api.h  gssNodeList.c  gssNodeList.h  reductionPath.c  shiftQueue.c  shiftQueue.h
sglr/src/parseForest/: filters.c  levels.c  levels.h
sglr/src/parseTable/: parseTable.c  parseTableDB.h
sglr/src/parser/: parser.c
sglr/src/utils/: bitmap.c  bitmap.h  list.c  list.h  marking.c  memoryManagerGenerator.h  posmap.c  statusBar.h
sglr/test/: Makefile.am  Makefile.in  lang-types  regress-terms.sh.src
sglr/test/erroneous/: Makefile.in
sglr/test/tables/: Makefile.in  NoStartSymbol.tbl
sglr/test/terms/: Makefile.in
toolbuslib/aterm/: Makefile.am  Makefile.in  atb-tool.c
(+369 files in other folders)
